--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <!-- <div class="control"><input id="show-box" name="show-box" type="checkbox" onchange="DrawScene()" checked /><label for="show-box"> Mostrar caja</label></div> -->
                     <div class="control"><input id="auto-rotate" name="auto-rotate" type="checkbox" checked onchange="AutoRotate(this)"/><label for="auto-rotate"> Rotación</label></div>
                     <div class="control"><input id="auto-rotate-light" name="auto-rotate-light" type="checkbox" onchange="AutoRotateLight(this)"/><label for="auto-rotate-light"> Ciclo solar</label></div>
-                    <div class="control"><span id="shininess-label">Intensidad:</span><span id="shininess-value">1</span><input id="shininess-exp" type="range" min="0" max="100" value="50" oninput="SetShininess(this)"/></div>
+                    <div class="control"><span id="shininess-label">Distancia solar:</span><span id="shininess-value">1</span><input id="shininess-exp" type="range" min="0" max="100" value="50" oninput="SetShininess(this)"/></div>
                 </div>
                 Continent
                 <div class="control-group">
@@ -51,7 +51,7 @@
                 Mountains
                 <div class="control-group">
                     <div class="control"><span id="mountain-numLayers-label">Layer number:</span><span id="mountain-numLayers-value">3</span><input id="numLayers" type="range" step=1 min="0" max="10" value="3" oninput="ChangeMountainNumLayers(this.value)"/></div>
-                    <div class="control"><span id="mountain-blend-label">Blend:</span><span id="mountain-blend-value">1</span><input id="blend" type="range" step=0.05 min="0" max="10" value="1" oninput="ChangeMountainBlend(this.value)"/></div>
+                    <div class="control"><span id="mountain-blend-label">Blend:</span><span id="mountain-blend-value">1</span><input id="blend" type="range" step=0.05 min="0.01" max="10" value="1" oninput="ChangeMountainBlend(this.value)"/></div>
                     <div class="control"><span id="mountain-scale-label">Scale:</span><span id="mountain-scale-value">1</span><input id="scale" type="range" step="0.01" min="0.01" max="5" value="1" oninput="ChangeMountainScale(this.value)"/></div>
                 <div class="control"><span id="mountain-persistence-label">Smoothness:</span><span id="mountain-persistence-value">0.25</span><input id="persistence" type="range" step="0.01" min="0.01" max="2" value="0.25" oninput="ChangeMountainPersistence(this.value)"/></div>
                     <div class="control"><span id="mountain-lacunarity-label">Detail:</span><span id="mountain-lacunarity-value">0.25</span><input id="lacunarity" type="range" min="0.1" max="4" step="0.01" value="0.25" oninput="ChangeMountainLacunarity(this.value)"/></div>
@@ -67,6 +67,7 @@
                     <div class="control">Textura:<br/><input id="texture" type="file" onchange="LoadTexture(this)" accept="image/*"/></div>
                 </div>
 			</div>
+            <img id="texture-img" />
 		</div>
 		<div id="canvas-div"><canvas id="canvas"></canvas></div>
 	</body>
