--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="controls-div">
 			<!-- menu y controles-->
 			<div id="controls">
-                <div class="control-group"><canvas id="lightcontrol"></canvas><div id="lightcontrol-label">Dirección de la Luz</div></div>
+                <div hidden class="control-group"><canvas id="lightcontrol"></canvas><div id="lightcontrol-label">Dirección de la Luz</div></div>
                 General
                 <div class="control-group">
                     <!-- <div class="control"><input id="show-box" name="show-box" type="checkbox" onchange="DrawScene()" checked /><label for="show-box"> Mostrar caja</label></div> -->
@@ -48,7 +48,7 @@
                     <div class="control"><span id="ocean-smoothing-label">Smoothing:</span><span id="ocean-smoothing-value">2</span><input id="ocean-smoothing" type="range" step=0.05 min="0" max="10" value="2" oninput="ChangeOceanSmoothing(this.value)"/></div>
                 </div>
 
-                Mountains
+                <!-- Mountains
                 <div class="control-group">
                     <div class="control"><span id="mountain-numLayers-label">Layer number:</span><span id="mountain-numLayers-value">3</span><input id="numLayers" type="range" step=1 min="0" max="10" value="3" oninput="ChangeMountainNumLayers(this.value)"/></div>
                     <div class="control"><span id="mountain-blend-label">Blend:</span><span id="mountain-blend-value">1</span><input id="blend" type="range" step=0.05 min="0.01" max="10" value="1" oninput="ChangeMountainBlend(this.value)"/></div>
@@ -60,14 +60,13 @@
                     <div class="control"><span id="mountain-gain-label">Gain:</span><span id="mountain-gain-value">1</span><input id="gain" type="range" step=0.05 min="0" max="10" value="1" oninput="ChangeMountainGain(this.value)"/></div>
                     <div class="control"><span id="mountain-offset-label">Offset:</span><span id="mountain-offset-value">1</span><input id="offset" type="range" step=0.05 min="0" max="10" value="1" oninput="ChangeMountainOffset(this.value)"/></div>
                     <div class="control"><span id="mountain-verticalShift-label">VerticalShift:</span><span id="mountain-verticalShift-value">-1</span><input id="verticalShift" type="range" step="0.01" min="-5" max="5" value="0" oninput="ChangeMountainVerticalShift(this.value)"/></div>
-                </div>
+                </div> -->
 
                 <div class="control-group">
-                    <div class="control">Modelo:<br/><input id="obj" type="file" onchange="LoadObj(this)" accept=".obj"/></div>
-                    <div class="control">Textura:<br/><input id="texture" type="file" onchange="LoadTexture(this)" accept="image/*"/></div>
+                    <div class="control">Atmosfera:<br/><input id="texture" type="file" onchange="LoadTexture(this)" accept="image/*"/></div>
                 </div>
 			</div>
-            <img id="texture-img" />
+            <img hidden id="texture-img" />
 		</div>
 		<div id="canvas-div"><canvas id="canvas"></canvas></div>
 	</body>
