--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <!-- estilo-->
 <link href="style.css" rel="stylesheet">
 
-<script type="text/javascript" id="includedscript" src="boxdrawer.js"></script>
+<!-- <script type="text/javascript" id="includedscript" src="boxdrawer.js"></script> -->
 <script type="text/javascript" id="includedscript" src="lightview.js"></script>
-<script type="text/javascript" id="includedscript" src="project5.js"></script>
+<script type="text/javascript" id="includedscript" src="proceduralPlanets.js"></script>
 <script type="text/javascript" id="includedscript" src="./utils/noise.js"></script>
 <script type="text/javascript" id="includedscript" src="./utils/helpers.js"></script>
-<script type="text/javascript" id="includedscript" src="ejercicio.js"></script>
+<script type="text/javascript" id="includedscript" src="meshDrawer.js"></script>
 <script type="text/javascript" id="includedscript" src="sphere.js"></script>
 <script type="text/javascript" src="objmesh.js"></script>
 
