Add atmosphere rotation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" id="includedscript" src="proceduralPlanets.js"></script>
 <script type="text/javascript" id="includedscript" src="./utils/noise.js"></script>
 <script type="text/javascript" id="includedscript" src="./utils/helpers.js"></script>
-<script type="text/javascript" id="includedscript" src="meshDrawer.js"></script>
+<script type="text/javascript" id="includedscript" src="planetDrawer.js"></script>
 <script type="text/javascript" id="includedscript" src="sphere.js"></script>
 <script type="text/javascript" src="objmesh.js"></script>
 
