Hide .obj export option

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                     <div class="control">Export<br>
                     <button id="export" onclick="ExportPlanetSettings()">Export planet settings</button><br>
-                    <button id="export" onclick="ExportPlanetObj()">Export planet (.obj)</button></div>
+                    <!-- <button id="export" onclick="ExportPlanetObj()">Export planet (.obj)</button></div> -->
                 </div>
 			</div>
             <img hidden id="texture-img" crossorigin="anonymous"/>
